# serializer version: 1
# name: test_all_entities[sensor.cashflow_expense_ytd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cashflow_expense_ytd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:cash-minus',
    'original_name': 'Expense YTD',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sum_expense',
    'unique_id': 'monarch_money_cashflow_sum_expense',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.cashflow_expense_ytd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Cashflow Expense YTD',
      'icon': 'mdi:cash-minus',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cashflow_expense_ytd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-9000.0',
  })
# ---
# name: test_all_entities[sensor.cashflow_income_ytd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cashflow_income_ytd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:cash-plus',
    'original_name': 'Income YTD',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'sum_income',
    'unique_id': 'monarch_money_cashflow_sum_income',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.cashflow_income_ytd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Cashflow Income YTD',
      'icon': 'mdi:cash-plus',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cashflow_income_ytd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '15000.0',
  })
# ---
# name: test_all_entities[sensor.cashflow_savings_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cashflow_savings_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': None,
    'original_icon': 'mdi:cash-sync',
    'original_name': 'Savings rate',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'savings_rate',
    'unique_id': 'monarch_money_cashflow_savings_rate',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.cashflow_savings_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Cashflow Savings rate',
      'icon': 'mdi:cash-sync',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cashflow_savings_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.0',
  })
# ---
# name: test_all_entities[sensor.cashflow_savings_ytd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.cashflow_savings_ytd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:piggy-bank-outline',
    'original_name': 'Savings YTD',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'savings',
    'unique_id': 'monarch_money_cashflow_savings',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.cashflow_savings_ytd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'monetary',
      'friendly_name': 'Cashflow Savings YTD',
      'icon': 'mdi:piggy-bank-outline',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.cashflow_savings_ytd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6000.0',
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.manual_entry_wallet_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:cash',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Wallet_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via ',
      'device_class': 'monetary',
      'friendly_name': 'Manual entry Wallet Balance',
      'icon': 'mdi:cash',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.manual_entry_wallet_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.manual_entry_wallet_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Wallet_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via ',
      'device_class': 'timestamp',
      'friendly_name': 'Manual entry Wallet Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.manual_entry_wallet_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-08-16T14:22:10+00:00',
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.manual_entry_wallet_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Wallet_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.manual_entry_wallet_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via ',
      'device_class': 'timestamp',
      'friendly_name': 'Manual entry Wallet First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.manual_entry_wallet_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-08-16T14:22:10+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_bank_checking_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:checkbook',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Checking_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Bank Checking Balance',
      'icon': 'mdi:checkbook',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.02',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_bank_checking_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Checking_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Bank Checking Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T11:21:05+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_bank_checking_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Checking_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Bank Checking First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:32:33+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_brokerage_brokerage_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Brokerage_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'base64Nonce',
      'friendly_name': 'Rando Brokerage Brokerage Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.5',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_brokerage_brokerage_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Brokerage_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Brokerage Brokerage Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-05-26T00:56:41+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_brokerage_brokerage_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Brokerage_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Brokerage Brokerage First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:32:33+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_credit_credit_card_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:credit-card',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Credit Card_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Credit Credit Card Balance',
      'icon': 'mdi:credit-card',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-200.0',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_credit_credit_card_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Credit Card_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Credit Credit Card Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-12-10T18:17:06+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_credit_credit_card_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Credit Card_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Credit Credit Card First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:33:46+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_employer_investments_401_k_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_401.k_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Employer Investments 401.k Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100000.35',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_employer_investments_401_k_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_401.k_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Employer Investments 401.k Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T08:13:10+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_employer_investments_401_k_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_401.k_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Employer Investments 401.k First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:41:54+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_investments_roth_ira_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Roth IRA_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Investments Roth IRA Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10000.43',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_investments_roth_ira_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Roth IRA_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Investments Roth IRA Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T13:32:21+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_investments_roth_ira_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Roth IRA_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Investments Roth IRA First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:35:59+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_mortgage_mortgage_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:home-city-outline',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_Mortgage_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Mortgage Mortgage Balance',
      'icon': 'mdi:home-city-outline',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_mortgage_mortgage_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_Mortgage_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Mortgage Mortgage Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-08-16T01:41:36+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_mortgage_mortgage_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_Mortgage_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Mortgage Mortgage First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:45:25+00:00',
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:car',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_2050 Toyota RAV8_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via vin_audit',
      'device_class': 'monetary',
      'entity_picture': 'https://api.monarchmoney.com/cdn-cgi/image/width=128/images/institution/159427559853802644',
      'friendly_name': 'VinAudit 2050 Toyota RAV8 Balance',
      'icon': 'mdi:car',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11075.58',
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_2050 Toyota RAV8_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via vin_audit',
      'device_class': 'timestamp',
      'friendly_name': 'VinAudit 2050 Toyota RAV8 Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-08-16T17:37:21+00:00',
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_2050 Toyota RAV8_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.vinaudit_2050_toyota_rav8_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via vin_audit',
      'device_class': 'timestamp',
      'friendly_name': 'VinAudit 2050 Toyota RAV8 First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vinaudit_2050_toyota_rav8_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-08-16T17:37:21+00:00',
  })
# ---
# name: test_all_entities[sensor.zillow_house_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zillow_house_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:cash',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': '222260252323873333_House_balance',
    'unit_of_measurement': '$',
  })
# ---
# name: test_all_entities[sensor.zillow_house_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Zillow House Balance',
      'icon': 'mdi:cash',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': '$',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123000.0',
  })
# ---
# name: test_all_entities[sensor.zillow_house_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zillow_house_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': '222260252323873333_House_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.zillow_house_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'timestamp',
      'friendly_name': 'Zillow House Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-12T09:00:25+00:00',
  })
# ---
# name: test_all_entities[sensor.zillow_house_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zillow_house_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': '222260252323873333_House_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.zillow_house_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'timestamp',
      'friendly_name': 'Zillow House First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:39:29+00:00',
  })
# ---
